2009-12-24  Jessie Berlin  <jberlin@webkit.org>

        Reviewed by Dan Bernstein.

        Fix for WebKit bug 29968 - Selecting text with text-overflow ellipsis
        should not show cut off text
        https://bugs.webkit.org/show_bug.cgi?id=29968

        Also fixes the issue on both Mac OS X and Windows where the highlight
        would extend only partway into the ellipsis based on the size of the
        characters being truncated.

        Test: editing/selection/select-text-overflow-ellipsis.html

        * rendering/EllipsisBox.cpp:
        (WebCore::EllipsisBox::paint):
        When the ellipsis have been selected, paints them with the color for
        selected text.
        (WebCore::EllipsisBox::selectionRect):
        Returns the selection rect for the ellipsis text.
        (WebCore::EllipsisBox::paintSelection):
        Paints the selection highlight around the ellipsis text.

        * rendering/EllipsisBox.h:
        (WebCore::EllipsisBox::EllipsisBox):
        Default the selection state of the EllipsisBox to SelectionNone.
        (WebCore::EllipsisBox::setSelectionState):
        Allow the selection state to be explicitly set by the InlineTextBox
        that it is associated with, since the selection state depends on the
        position of the selection within the truncated text.
        (WebCore::EllipsisBox::selectionState):
        Return the cached selection state.
        
        * rendering/InlineTextBox.cpp:
        (WebCore::InlineTextBox::selectionState):
        If the text is truncated and the selection extends into the truncation
        where there are ellipsis, set the selection state on the EllipsisBox.
        (WebCore::paintTextWithShadows):
        Allow for an upper bound to be specified on the maximum length of the
        text to be painted.
        (WebCore::InlineTextBox::paint):
        Make sure the text that is drawn gets appropriately truncated. This was